--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -4,7 +4,7 @@
 ==ისტორია==
 {{რომის მთავრობა}}
 
-ცივილიზაციის დასაბამიდან დღემდე არსებულ მმართველ ორგანოებს შორის რომის სენატმა ყველაზე დიდხანს იარსება, მისი შექმნის შესახებ ზუსტი ისტორიული წყაროები არ მოგვეპოვება, მაგრამ თქმულებების თანახმად იგი რომის დასაბამიდან არსებობდა. სენატმა თავისი ფუნქციები დაკარგა მხოლოდ III-IV საუკუნეების მიჯნაზე, [[პრინციპატი|პრინციპატის]] [[დომინანტი|დომინანტით]] შეცვლის შემდეგ. ამრიგად საერთო ჯამში სენატმა იარსება დაახლოვებით 1000 წელიწადი. ამ დროის განმავლობაში სენატის სახე და ფუნქციები არაერთხელ შეიცვალა.
+ცივილიზაციის დასაბამიდან დღემდე არსებულ მმართველ ორგანოებს შორის რომის სენატმა ყველაზე დიდხანს იარსება, მისი შექმნის შესახებ ზუსტი ისტორიული წყაროები არ მოგვეპოვება, მაგრამ თქმულებების თანახმად იგი რომის დასაბამიდან არსებობდა. სენატმა თავისი ფუნქციები დაკარგა მხოლოდ III-IV საუკუნეების მიჯნაზე, [[პრინციპატი|პრინციპატის]] [[დომინანტი|დომინანტით]] შეცვლის შემდეგ, მაგრამ, მიუხედავად ამისა, სახეცვლილმა სენატმა რომის იმპერიის აღსასრულამდე იარსება. ამრიგად საერთო ჯამში სენატმა იარსება დაახლოვებით 1229 წელიწადი. ამ დროის განმავლობაში სენატის სახე და ფუნქციები არაერთხელ შეიცვალა.
 
 ===მეფობის პერიოდი===
 
