--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -40,6 +40,7 @@
 
 ხოლო [[395]] წლიდან, როდესაც იმპერია გაიყო, სენატი მუნიციპალურ საბჭოთ იქცა. აღმოსავლეთ რომის იმპერიის დედაქალაქში [[კონსტანტინოპოლი|კონსტანტინოპოლში]] თავისი სენატი ჩამოყალიბდა. ზოგი გავლენიანი სენატორი ორივე სენატის წევრი იყო. [[476]] წელს დასავლეთ რომის იმპერიის დაცემათან ერთად რომის სენატმაც შეწყვიტა არსებობა.
 
+[[სურათი:Senator toga.jpg|thumb|200px|რომაელი სენატორის ტრადიციული ტოგა]]
 ==განაწესი==
 
 {{ესკიზი}}
