*Empty MediaWiki Message*

--- a/ფრენკ_გერი.mw
+++ b/ფრენკ_გერი.mw
@@ -1,11 +1,18 @@
 [[სურათი:Guggenheim bilbao.JPG|thumb|300px|გერის ყველაზე ცნობილი ნამუშევარი, [[გუგენჰაიმის მუზეუმი (ბილბაო)|გუგენჰაიმის მუზეუმი]], [[ბილბაო]], [[ესპანეთი]]]]
-'''ფრენკ ოუვენ გერი''' (Frank Owen Gehry) (დაბადბით ''ეფრაიმ გოლდბერგი'', [[28 თებერვალი]], [[1929]]) არქიტექტორია ცნობილი შენობათა დიზაინის სკულპტურული გადაწყვეტის სტილით. მისი ყველაზე ცნობილი შენობები გამოირჩევა მორკალული სტრუქტურებით, როგორც წესი, დაფარული ამრეკლი ლითონის ფირფიტებით. მისი საყოველთაოდ ცნობილი ნამუშევარი და მისი სტილის ყველაზე თვლასაჩინო მაგალითია გუგენჰაიმის მუზეუმი ბილბაოში, ესპანეთი, რომლის ზედაპირი თითქმის მთლიანად ტიტანის ფირფიტებითაა დაფარული.
+'''ფრენკ ოუვენ გერი''' (Frank Owen Gehry) (დაბ. ''ეფრაიმ გოლდბერგი'', [[28 თებერვალი]], [[1929]]) არქიტექტორია განთქმული შენობათა დიზაინის სკულპტურული გადაწყვეტის სტილით. მისი ყველაზე ცნობილი შენობები გამოირჩევა მორკალული ზედაპირებით, როგორც წესი, დაფარული ამრეკლი ლითონის ფირფიტებით. მისი საყოველთაოდ ცნობილი ნამუშევარი და მისეული სტილის ყველაზე თვლასაჩინო მაგალითია გუგენჰაიმის მუზეუმი ბილბაოში, ესპანეთი, რომლის ზედაპირი თითქმის მთლიანად [[ტიტანი|ტიტანის]] ფირფიტებითაა დაფარული.
 
+==ბიოგრაფია==
 დაიბადა ტორონტოში, კანადა, ებრაულ ოჯახში. 17 წლისა კალიფორნიაში გადადის, სადაც ლოს-ანჟელესის ქალაქის კოლეჯში სწავლობს, შემდეგ კი სამხრეთ კალიფორნიის უნივერსიტეტის არქიტექტურის სკოლას ამთავრებს. შემდეგ იგი ქალაქის გეგმარებას სწავლობს ჰარვარდის უნივერსიტეტის დიზაინის სკოლაში. ამჟამად ამერიკის მოქალაქეა და ლოს-ანჟელესში ცხოვრობს.
 
+==სტილი==
 გერის სტილი გვიანდელი მოდერნიზმზს ეფუძნება. მისი დეფორმირებული სტრუქტურები მოდერნისტული არქიტექტურის დეკონსტრუქტივიზმის (დეკონ) სკოლის გამოხატულებად მიიჩნევა. დეკონის მიმდინარეობა მოდერნიზმიდან გადახვევაა, რომელიც მის სოციალურ მიზანთა და ფუნქციონალურ საჭიროებაზე ყურადღების არიდებაში გამოიხატება. ადრეული მოდერნისტული სტრუქტურებისგან განსხვავებით დეკონის სტრუქტურები არ საჭიროებენ სპეციფიურ სოციალურ იდეათა ასახვას (მაგ. სიჩქარე ან ფორმის უნივერსალობა) და ისინი არ ემყარებიან რწმენას, რომ ფორმა ფუქციას მოსდევს. დეკონი, რომელსაც გერი უფრო ხვეწს, ასევე ცნობილია, როგორც სანტა-მონიკას არქიტექტურული სკოლა. ამერიკის ამ რეგიონმა გამოუშვა ექსპერიმენტთა უდიდესი სპექტრი დეკონის დიზიანის დარგში და შეიცავს ამგვარ სტრუქტურათა უდიდეს კონცენტრაციას.
 
-გერი თანამედროვე არქიტექტურის ხატად და ვარსკვლავად მიიჩნევა. ის დაკავშირებული კომპანია ეპლის დიზაინის ფილოსოფიასთან. მისი შენობები, საკუთარი სახლის ჩათვლით, ტურისტთა ღირშესანიშნაობებად იქცა. მრავალი მუზეუმი, ფირმა და ქალაქიც კი ცდილობს გერის დაინტერესებას, მიუხედავად იმისა, თუ რა იქნება არქიტექტორის საბოლოო პროდუქტი.
+გერი თანამედროვე არქიტექტურის ხატად მიიჩნევა. ის დაკავშირებული კომპანია ეპლის დიზაინის ფილოსოფიასთან. მისი შენობები, საკუთარი სახლის ჩათვლით, ტურისტთა ღირშესანიშნაობებად იქცა. მრავალი მუზეუმი, ფირმა და ქალაქიც კი ცდილობს გერის დაინტერესებას, მიუხედავად იმისა, თუ რა იქნება არქიტექტორის საბოლოო პროდუქტი.
+
+[[სურათი:Gehry Pritzker.JPG|thumb|250px|left|პრიცკერის პავილიონი მილენიუმის პარკში, ჩიკაგო]]
+სიეტლის მუსიკის მუზეუმი განასახიერებს ამ ფენომენს მის ექსტრემალურ ფორმაში. მაიკროსოფტის პოლ ალენმა არქიტექტორად გერი აირჩია მუსიკის ისტორიის ნიმუშთა კოლექციისთვის ურბანული სტრუქტურის პროექტისთვის. მიუხედავად იმისა, რომ შედეგ უდაოდ უნიკალური გამოვიდა, კრიტიკოსთა რეაქცია უკიდურესად მწვავე იყო. თვალისმომჭრელმა ფერების, გარემოს არქიტექტურისა და ბუნების ჰარმონიის იგნორირებისა და მამონტის ჩონჩხის მაგვარი კონსტრუქციის გამო კრიტიკოსებმა მას უბრალოდ "დიდი შეცდომა" შეარქვეს. თუმცა შენობის მომხრეებს გვიანდელ მე-19 საუკუნეში ეიფელის კოშკის ისტორია მოჰყავთ მაგალითად და მტკიცებენ, რომ მხოლოდ ისტორიულ პერსპექტივაში არის შესაძლებელი შენობის მხატვრული ღირსების შეფასება.
+
+ბოლო დროს გერის აკრიტიკებენ საკუთარი თავის გამეორების გამო, თითქოს ლითონის დანაწევრებული პანოებით აკოწიწებული კონსტრუქციები, რომელიც გერის სამარკო ნიშანი გახდა ზედმეტად ხშირად გამოყენებადი გახდა. მის ბოლოდროინდელ ნამუშევართა უმრავლესობა ბილბაოს გუგენჰაიმის ნაირსახეობად მიიჩნევა. თუმცა მისი კრიტიკოსები და დამცველები გულდასმით ადევნებენ თვალყურს გერის შემოქმედების იმის მოლოდინში შეძლებს თუ არა არქიტექტორი ახალი განსხვავებული იდიომის ფორმების შექმნას.
 
 ==ნამუშევრები==
 
