--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -44,6 +44,16 @@
 
 ==განაწესი==
 
+===საკანონმდებლო შემოქმედება===
+
+===წევრობა===
+
+===იერარქია===
+
+===ჩაცმულობა===
+
+==ლიტერატურა და რესურსები ინტერნეტში==
+
 {{ესკიზი}}
 
 
