--- a/ფრენკ_გერი.mw
+++ b/ფრენკ_გერი.mw
@@ -2,7 +2,7 @@
 '''ფრენკ ოუვენ გერი''' (Frank Owen Gehry) (დაბ. ''ეფრაიმ გოლდბერგი'', [[28 თებერვალი]], [[1929]]) არქიტექტორია განთქმული შენობათა დიზაინის სკულპტურული გადაწყვეტის სტილით. მისი ყველაზე ცნობილი შენობები გამოირჩევა მორკალული ზედაპირებით, როგორც წესი, დაფარული ამრეკლი ლითონის ფირფიტებით. მისი საყოველთაოდ ცნობილი ნამუშევარი და მისეული სტილის ყველაზე თვლასაჩინო მაგალითია გუგენჰაიმის მუზეუმი ბილბაოში, ესპანეთი, რომლის ზედაპირი თითქმის მთლიანად [[ტიტანი|ტიტანის]] ფირფიტებითაა დაფარული.
 
 ==ბიოგრაფია==
-დაიბადა ტორონტოში, კანადა, ებრაულ ოჯახში. 17 წლისა კალიფორნიაში გადადის, სადაც ლოს-ანჟელესის ქალაქის კოლეჯში სწავლობს, შემდეგ კი სამხრეთ კალიფორნიის უნივერსიტეტის არქიტექტურის სკოლას ამთავრებს. შემდეგ იგი ქალაქის გეგმარებას სწავლობს ჰარვარდის უნივერსიტეტის დიზაინის სკოლაში. ამჟამად ამერიკის მოქალაქეა და ლოს-ანჟელესში ცხოვრობს.
+დაიბადა [[ტორონტო|ტორონტოში]], [[კანადა]], ებრაულ ოჯახში. 17 წლისა [[კალიფორნია|კალიფორნიაში]] გადადის, სადაც [[ლოს-ანჟელესი|ლოს-ანჟელესის]] ქალაქის კოლეჯში სწავლობს, მოგვიანებით კი [[სამხრეთ კალიფორნიის უნივერსიტეტი|სამხრეთ კალიფორნიის უნივერსიტეტის]] არქიტექტურის სკოლას ამთავრებს. შემდეგ იგი ქალაქის გეგმარებას სწავლობს [[ჰარვარდის უნივერსიტეტი|ჰარვარდის უნივერსიტეტის]] დიზაინის სკოლაში. ამჟამად ამერიკის მოქალაქეა და ლოს-ანჟელესში ცხოვრობს.
 
 ==სტილი==
 გერის სტილი გვიანდელი მოდერნიზმზს ეფუძნება. მისი დეფორმირებული სტრუქტურები მოდერნისტული არქიტექტურის დეკონსტრუქტივიზმის (დეკონ) სკოლის გამოხატულებად მიიჩნევა. დეკონის მიმდინარეობა მოდერნიზმიდან გადახვევაა, რომელიც მის სოციალურ მიზანთა და ფუნქციონალურ საჭიროებაზე ყურადღების არიდებაში გამოიხატება. ადრეული მოდერნისტული სტრუქტურებისგან განსხვავებით დეკონის სტრუქტურები არ საჭიროებენ სპეციფიურ სოციალურ იდეათა ასახვას (მაგ. სიჩქარე ან ფორმის უნივერსალობა) და ისინი არ ემყარებიან რწმენას, რომ ფორმა ფუქციას მოსდევს. დეკონი, რომელსაც გერი უფრო ხვეწს, ასევე ცნობილია, როგორც სანტა-მონიკას არქიტექტურული სკოლა. ამერიკის ამ რეგიონმა გამოუშვა ექსპერიმენტთა უდიდესი სპექტრი დეკონის დიზიანის დარგში და შეიცავს ამგვარ სტრუქტურათა უდიდეს კონცენტრაციას.
