--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -46,6 +46,8 @@
 
 ===საკანონმდებლო შემოქმედება===
 
+რესპუბლიკის პერიოდის სენატის ფუნქციებში როგორც ავღნიშნეთ შედიოდა საკანონმდებლო პროექტების შემუშავება. ამ პროექტების დანხილვა და დამტკიცება [[სახალხო კრება|სახალხო კრებას]] ევალებოდა. თუ სახალხო კრება არ მოიწონებდა კანონპროექტს, მაშინ იგი კანონად ვერ იქცეოდა. სახალხო კრებასაც შეეძლო კანონპროექტის წარმოდგენა, მაგრამ სენატის მოწონების გარეშე ვერც ეს იქცეოდა კანონად. "მოწონება" იყო სენატის ყველაზე დიდი უფლება - auctoritas senatus.
+
 ===წევრობა===
 
 ===იერარქია===
