--- a/ფრენკ_გერი.mw
+++ b/ფრენკ_გერი.mw
@@ -5,14 +5,14 @@
 დაიბადა [[ტორონტო|ტორონტოში]], [[კანადა]], ებრაულ ოჯახში. 17 წლისა [[კალიფორნია|კალიფორნიაში]] გადადის, სადაც [[ლოს-ანჟელესი|ლოს-ანჟელესის]] ქალაქის კოლეჯში სწავლობს, მოგვიანებით კი [[სამხრეთ კალიფორნიის უნივერსიტეტი|სამხრეთ კალიფორნიის უნივერსიტეტის]] არქიტექტურის სკოლას ამთავრებს. შემდეგ იგი ქალაქის გეგმარებას სწავლობს [[ჰარვარდის უნივერსიტეტი|ჰარვარდის უნივერსიტეტის]] დიზაინის სკოლაში. ამჟამად ამერიკის მოქალაქეა და ლოს-ანჟელესში ცხოვრობს.
 
 ==სტილი==
-გერის სტილი გვიანდელი მოდერნიზმზს ეფუძნება. მისი დეფორმირებული სტრუქტურები მოდერნისტული არქიტექტურის დეკონსტრუქტივიზმის (დეკონ) სკოლის გამოხატულებად მიიჩნევა. დეკონის მიმდინარეობა მოდერნიზმიდან გადახვევაა, რომელიც მის სოციალურ მიზანთა და ფუნქციონალურ საჭიროებაზე ყურადღების არიდებაში გამოიხატება. ადრეული მოდერნისტული სტრუქტურებისგან განსხვავებით დეკონის სტრუქტურები არ საჭიროებენ სპეციფიურ სოციალურ იდეათა ასახვას (მაგ. სიჩქარე ან ფორმის უნივერსალობა) და ისინი არ ემყარებიან რწმენას, რომ ფორმა ფუქციას მოსდევს. დეკონი, რომელსაც გერი უფრო ხვეწს, ასევე ცნობილია, როგორც სანტა-მონიკას არქიტექტურული სკოლა. ამერიკის ამ რეგიონმა გამოუშვა ექსპერიმენტთა უდიდესი სპექტრი დეკონის დიზიანის დარგში და შეიცავს ამგვარ სტრუქტურათა უდიდეს კონცენტრაციას.
+გერის სტილი [[მოდერნიზმი|გვიანდელ მოდერნიზმზს]] ეფუძნება. მისი დეფორმირებული სტრუქტურები მოდერნისტული არქიტექტურის [[დეკონსტრუქტივიზმი|დეკონსტრუქტივიზმის]] (დეკონ) სკოლის გამოხატულებად მიიჩნევა. დეკონის მიმდინარეობა მოდერნიზმიდან გადახვევაა, რაც სოციალურ მიზანთა და ფუნქციონალურ საჭიროებაზე ყურადღების არიდებაში გამოიხატება. ადრეული მოდერნისტული სტრუქტურებისგან განსხვავებით დეკონის სტრუქტურები არ საჭიროებენ სპეციფიურ სოციალურ იდეათა ასახვას (მაგ. სიჩქარე ან ფორმის უნივერსალობა) და ისინი არ ემყარებიან რწმენას, რომ ფორმა ფუნქციას მოსდევს. დეკონი, რომელსაც გერი თავად უფრო ხვეწს, ასევე ცნობილია, როგორც [[სანტა-მონიკას არქიტექტურული სკოლა]]. ამერიკის ამ რეგიონმა შექმნა ექსპერიმენტთა უდიდესი სპექტრი დეკონის დიზიანის დარგში და მოიცავს ამგვარ სტრუქტურათა უდიდეს კონცენტრაციას.
 
-გერი თანამედროვე არქიტექტურის ხატად მიიჩნევა. ის დაკავშირებული კომპანია ეპლის დიზაინის ფილოსოფიასთან. მისი შენობები, საკუთარი სახლის ჩათვლით, ტურისტთა ღირშესანიშნაობებად იქცა. მრავალი მუზეუმი, ფირმა და ქალაქიც კი ცდილობს გერის დაინტერესებას, მიუხედავად იმისა, თუ რა იქნება არქიტექტორის საბოლოო პროდუქტი.
+ამჟამად პროფესიულ წრეებში გერი თანამედროვე არქიტექტურის ხატად მიიჩნევა. ის დაკავშირებულია კომპანია [[ეპლი|ეპლის]] დიზაინის ფილოსოფიასთან. მისი შენობები, საკუთარი სახლის ჩათვლით, ტურისტთა ღირშესანიშნაობებად იქცა. მრავალი მუზეუმი, ფირმა და ქალაქიც კი ცდილობს გერის საკუთარი პროექტებით დაინტერესებას, მიუხედავად იმისა, თუ რა იქნება არქიტექტორის საბოლოო პროდუქტი.
 
 [[სურათი:Gehry Pritzker.JPG|thumb|250px|left|პრიცკერის პავილიონი მილენიუმის პარკში, ჩიკაგო]]
-სიეტლის მუსიკის მუზეუმი განასახიერებს ამ ფენომენს მის ექსტრემალურ ფორმაში. მაიკროსოფტის პოლ ალენმა არქიტექტორად გერი აირჩია მუსიკის ისტორიის ნიმუშთა კოლექციისთვის ურბანული სტრუქტურის პროექტისთვის. მიუხედავად იმისა, რომ შედეგ უდაოდ უნიკალური გამოვიდა, კრიტიკოსთა რეაქცია უკიდურესად მწვავე იყო. თვალისმომჭრელმა ფერების, გარემოს არქიტექტურისა და ბუნების ჰარმონიის იგნორირებისა და მამონტის ჩონჩხის მაგვარი კონსტრუქციის გამო კრიტიკოსებმა მას უბრალოდ "დიდი შეცდომა" შეარქვეს. თუმცა შენობის მომხრეებს გვიანდელ მე-19 საუკუნეში ეიფელის კოშკის ისტორია მოჰყავთ მაგალითად და მტკიცებენ, რომ მხოლოდ ისტორიულ პერსპექტივაში არის შესაძლებელი შენობის მხატვრული ღირსების შეფასება.
+[[სიეტლის მუსიკის მუზეუმი]] განასახიერებს ამ ფენომენს მის ექსტრემალურ ფორმაში. [[მაიკროსოფტი|მაიკროსოფტის]] პოლ ალენმა არქიტექტორად გერი აირჩია მუსიკის ისტორიის ნიმუშთა კოლექციისთვის ურბანული სტრუქტურის დიზაინისთვის. მიუხედავად იმისა, რომ შედეგი უდაოდ უნიკალური გამოვიდა, კრიტიკოსთა რეაქცია უკიდურესად მწვავე იყო. თვალისმომჭრელი ფერების, გარემოს არქიტექტურისა და ბუნების ჰარმონიის იგნორირებისა და მამონტის ჩონჩხის მაგვარი კონსტრუქციის გამო კრიტიკოსებმა მას უბრალოდ "დიდი შეცდომა" შეარქვეს. თუმცა შენობის მომხრეებს გვიანდელ მე-19 საუკუნეში [[ეიფელის კოშკი|ეიფელის კოშკის]] ისტორია მოჰყავთ მაგალითად და ამტკიცებენ, რომ მხოლოდ ისტორიულ პერსპექტივაში არის შესაძლებელი შენობის მხატვრული ღირსების შეფასება.
 
-ბოლო დროს გერის აკრიტიკებენ საკუთარი თავის გამეორების გამო, თითქოს ლითონის დანაწევრებული პანოებით აკოწიწებული კონსტრუქციები, რომელიც გერის სამარკო ნიშანი გახდა ზედმეტად ხშირად გამოყენებადი გახდა. მის ბოლოდროინდელ ნამუშევართა უმრავლესობა ბილბაოს გუგენჰაიმის ნაირსახეობად მიიჩნევა. თუმცა მისი კრიტიკოსები და დამცველები გულდასმით ადევნებენ თვალყურს გერის შემოქმედების იმის მოლოდინში შეძლებს თუ არა არქიტექტორი ახალი განსხვავებული იდიომის ფორმების შექმნას.
+ბოლო დროს გერის აკრიტიკებენ საკუთარი თავის განმეორების გამო, თითქოს ლითონის დანაწევრებული პანოებით აკოწიწებული კონსტრუქციები, რომელიც გერის სამარკო ნიშანი გახდა, ზედმეტად ხშირად გამოყენებადი იყოს. მის ბოლოდროინდელ ნამუშევართა უმრავლესობა [[გუგენჰაიმის მუზეუმი (ბილბაო)|ბილბაოს გუგენჰაიმის]] ნაირსახეობად მიიჩნევა. მიუხედავად ყველაფრისა, გერის კრიტიკოსები და დამცველები გულდასმით ადევნებენ თვალყურს არქიტექტორის შემოქმედების, იმის მოლოდინში, შეძლებს თუ არა იგი ახალი განსხვავებული იდიომის შთამბეჭდავი ფორმების შექმნას.
 
 ==ნამუშევრები==
 
