/* ამ დღეს დაბადებულნი */

--- a/28_თებერვალი.mw
+++ b/28_თებერვალი.mw
@@ -12,9 +12,8 @@
 ==ამ დღეს დაბადებულნი==
 
 *[[1533]] : [[მონტენი, მიშელ დე]] – ფრანგი ფილოსოფოსი.
-*[[1986]] : [[პალმე, ულოფ]] – შვეციის პრემიერ–მინისტრი
-
-
+*[[1929]] : [[გერი, ფრენკ]] - ამერიკელი არქიტექტორი.
+*[[1986]] : [[პალმე, ულოფ]] – შვეციის პრემიერ–მინისტრი.
 
 ==ამ დღეს გარდაცვლილნი==
 
