--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -48,6 +48,10 @@
 
 რესპუბლიკის პერიოდის სენატის ფუნქციებში როგორც ავღნიშნეთ შედიოდა საკანონმდებლო პროექტების შემუშავება. ამ პროექტების დანხილვა და დამტკიცება [[სახალხო კრება|სახალხო კრებას]] ევალებოდა. თუ სახალხო კრება არ მოიწონებდა კანონპროექტს, მაშინ იგი კანონად ვერ იქცეოდა. სახალხო კრებასაც შეეძლო კანონპროექტის წარმოდგენა, მაგრამ სენატის მოწონების გარეშე ვერც ეს იქცეოდა კანონად. "მოწონება" იყო სენატის ყველაზე დიდი უფლება - auctoritas senatus.
 
+ამრიგად სახალხო კრება და სენატი ერთმანეთს ავსებდნენ, ერთმანეთთან თანხმობის გარეშე ვერცერთი მხარე ვერ მიაღწევდა სასურველ შედეგს. პრაქტიკაზე ეს გრაქხუსების ამბის დროს არ გამართლდა, ხოლო რესპუბლიკის კრახის შემდეგ სახალხო კრებამ დრულიად დაკარგა ფუნქცია.
+
+საგარეო პოლიტიკაში სენატს უმთავრესი ადგილი ეჭირა. ელჩობის მიღების და გაგზავნის ფუნქცია მას ეკისრა. პროვინციების მართვაც სწორედ სენატის კომპენტენციაში შედიოდა. სენატი ასევე წყვეტდა ომის და მშვიდობის საკითხებს, იგი ანიჭებდა რომის მოკავშირეებს რომაელი ხალხის მოკავშირის და მეგობრის სტატუსს. როდესაც სახელმწიფოში საგანგებო სიტუაცია იქმნებოდა, სენატი ღებულობდა გადაწყვეტილებას 6 თვის ვადით აერჩიათ დიქტატორი, რომელსაც კრიზისის მოგვარებამდე აფსოლუტური ძალაუფლება ენიჭებოდა.
+
 ===წევრობა===
 
 ===იერარქია===
