--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -50,7 +50,11 @@
 
 ამრიგად სახალხო კრება და სენატი ერთმანეთს ავსებდნენ, ერთმანეთთან თანხმობის გარეშე ვერცერთი მხარე ვერ მიაღწევდა სასურველ შედეგს. პრაქტიკაზე ეს გრაქხუსების ამბის დროს არ გამართლდა, ხოლო რესპუბლიკის კრახის შემდეგ სახალხო კრებამ დრულიად დაკარგა ფუნქცია.
 
-საგარეო პოლიტიკაში სენატს უმთავრესი ადგილი ეჭირა. ელჩობის მიღების და გაგზავნის ფუნქცია მას ეკისრა. პროვინციების მართვაც სწორედ სენატის კომპენტენციაში შედიოდა. სენატი ასევე წყვეტდა ომის და მშვიდობის საკითხებს, იგი ანიჭებდა რომის მოკავშირეებს რომაელი ხალხის მოკავშირის და მეგობრის სტატუსს. როდესაც სახელმწიფოში საგანგებო სიტუაცია იქმნებოდა, სენატი ღებულობდა გადაწყვეტილებას 6 თვის ვადით აერჩიათ დიქტატორი, რომელსაც კრიზისის მოგვარებამდე აფსოლუტური ძალაუფლება ენიჭებოდა.
+საგარეო პოლიტიკაში სენატს უმთავრესი ადგილი ეჭირა. ელჩობის მიღების და გაგზავნის ფუნქცია მას ეკისრა. პროვინციების მართვაც სწორედ სენატის კომპენტენციაში შედიოდა. სენატი ასევე წყვეტდა ომის და მშვიდობის საკითხებს, იგი ანიჭებდა რომის მოკავშირეებს რომაელი ხალხის მოკავშირის და მეგობრის სტატუსს.
+
+როდესაც სახელმწიფოში საგანგებო სიტუაცია იქმნებოდა, სენატი ღებულობდა გადაწყვეტილებას 6 თვის ვადით აერჩიათ დიქტატორი, რომელსაც კრიზისის მოგვარებამდე აფსოლუტური ძალაუფლება ენიჭებოდა. ამის გარდა მაგისტრატუსების დამტკიცებაც სენატის პრეროგატივა იყო.
+
+სენატორთა შეკრებებსაც თავისი წესი და რიგი ჰქონდა. მათ სხდომის ჩატარება მხოლოდ ტაძრებში შეეძლოთ. როგორც წესი ეს [[რომის კურია]] იყო, ხოლო ახალ წელს, იუპიტერის დღესასწაულსა და საომარი საკითხების გადაწყვეტისას ქალღმერთ [[ბელონა|ბელონას]] ტაძარში.
 
 ===წევრობა===
 
