--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -44,7 +44,7 @@
 
 ==განაწესი==
 
-===საკანონმდებლო შემოქმედება===
+===საკანონმდებლო შემოქმედება და სხდომის ჩატარების წესები===
 
 რესპუბლიკის პერიოდის სენატის ფუნქციებში როგორც ავღნიშნეთ შედიოდა საკანონმდებლო პროექტების შემუშავება. ამ პროექტების დანხილვა და დამტკიცება [[სახალხო კრება|სახალხო კრებას]] ევალებოდა. თუ სახალხო კრება არ მოიწონებდა კანონპროექტს, მაშინ იგი კანონად ვერ იქცეოდა. სახალხო კრებასაც შეეძლო კანონპროექტის წარმოდგენა, მაგრამ სენატის მოწონების გარეშე ვერც ეს იქცეოდა კანონად. "მოწონება" იყო სენატის ყველაზე დიდი უფლება - auctoritas senatus.
 
@@ -54,7 +54,9 @@
 
 როდესაც სახელმწიფოში საგანგებო სიტუაცია იქმნებოდა, სენატი ღებულობდა გადაწყვეტილებას 6 თვის ვადით აერჩიათ დიქტატორი, რომელსაც კრიზისის მოგვარებამდე აფსოლუტური ძალაუფლება ენიჭებოდა. ამის გარდა მაგისტრატუსების დამტკიცებაც სენატის პრეროგატივა იყო.
 
-სენატორთა შეკრებებსაც თავისი წესი და რიგი ჰქონდა. მათ სხდომის ჩატარება მხოლოდ ტაძრებში შეეძლოთ. როგორც წესი ეს [[რომის კურია]] იყო, ხოლო ახალ წელს, იუპიტერის დღესასწაულსა და საომარი საკითხების გადაწყვეტისას ქალღმერთ [[ბელონა|ბელონას]] ტაძარში.
+სენატორთა შეკრებებსაც თავისი წესი და რიგი ჰქონდა. მათ სხდომის ჩატარება მხოლოდ ტაძრებში შეეძლოთ. როგორც წესი ეს [[რომის კურია]] იყო, ხოლო ახალ წელს, იუპიტერის დღესასწაულსა და საომარი საკითხების გადაწყვეტისას ქალღმერთ [[ბელონა|ბელონას]] ტაძარში. 
+
+სხდომის დაწყებამდე დილის ლოცვა და მსხვერპლშეწირვა უნდა მომხდარიყო, ხოლო კეთილი ნიშნის მიღების შემდეგ იწყებოდა სხდომა. სენატის სხდომა მზის ამოსვლიდან მზის ჩასვლამდე შეიძლებოდა გაგრძელებულიყო და თუ რაიმე სხვა კრების სხდომა ტარდებოდა, მათ არ შეეძლოთ შეხვედრა.
 
 ===წევრობა===
 
