--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -60,6 +60,8 @@
 
 ===წევრობა===
 
+როგორც ზემოთ ავღნიშნეთ, თქმულების თანახმად, რომის დაარსების შემდეგ რომულუსმა 100 კაციანი სენატი შექმნა. საბინელთა შემოერთების შემდეგ სენატორთა რაოდენობა 200 გახდა, ხოლო რესპუბლიკის დროს ტრადიციულად 300 კაციანი სენატი არსებობდა. სენატში მიღებას ცენზორები აწარმოებდნენ. ყოფილ მაგისტრატებსაც შეეძლოთ სენატში მოხვედრა.
+
 ===იერარქია===
 
 ===ჩაცმულობა===
