*Empty MediaWiki Message*

--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -14,7 +14,7 @@
 
 ===რესპუბლიკა===
 
-მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა, იგი ჯერ კიდევ მცირე რომის სახელმწიფოში ასრულებდა საკანონმდებლო ხელისუფლების როლს. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატუსები|მაგისტრატუსების]] არჩევა.
+მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა, იგი ჯერ კიდევ მცირე რომის სახელმწიფოში ასრულებდა საკანონმდებლო ხელისუფლების როლს. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატები|მაგისტრატების]] არჩევა.
 
 [[სურათი:SPQR.jpg|thumb|left|რომის სენატი და ხალხი]]
 საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. ამის გარდა სენატი იღებდა და აუქმებდა კანონებს. ყველა ამ მნიშვნელოვანი ფუნქციის შესრულებამ სენატი სახელმწიფოს გულად აქცია. რიგითი რომაელისთვის სენტის უპატივცემლობა სახელმწიფოს უპატივცემლობას უტოლდებოდა. ეს კარგად აისახა ცნობილ ფორმულაშიც SPQR, senatus populus que romanus (რომის სენატი და ხალხი).
@@ -52,7 +52,7 @@
 
 საგარეო პოლიტიკაში სენატს უმთავრესი ადგილი ეჭირა. ელჩობის მიღების და გაგზავნის ფუნქცია მას ეკისრა. პროვინციების მართვაც სწორედ სენატის კომპენტენციაში შედიოდა. სენატი ასევე წყვეტდა ომის და მშვიდობის საკითხებს, იგი ანიჭებდა რომის მოკავშირეებს რომაელი ხალხის მოკავშირის და მეგობრის სტატუსს.
 
-როდესაც სახელმწიფოში საგანგებო სიტუაცია იქმნებოდა, სენატი ღებულობდა გადაწყვეტილებას 6 თვის ვადით აერჩიათ დიქტატორი, რომელსაც კრიზისის მოგვარებამდე აფსოლუტური ძალაუფლება ენიჭებოდა. ამის გარდა მაგისტრატუსების დამტკიცებაც სენატის პრეროგატივა იყო.
+როდესაც სახელმწიფოში საგანგებო სიტუაცია იქმნებოდა, სენატი ღებულობდა გადაწყვეტილებას 6 თვის ვადით აერჩიათ დიქტატორი, რომელსაც კრიზისის მოგვარებამდე აფსოლუტური ძალაუფლება ენიჭებოდა. ამის გარდა მაგისტრატების დამტკიცებაც სენატის პრეროგატივა იყო.
 
 სენატორთა შეკრებებსაც თავისი წესი და რიგი ჰქონდა. მათ სხდომის ჩატარება მხოლოდ ტაძრებში შეეძლოთ. როგორც წესი ეს [[რომის კურია]] იყო, ხოლო ახალ წელს, იუპიტერის დღესასწაულსა და საომარი საკითხების გადაწყვეტისას ქალღმერთ [[ბელონა|ბელონას]] ტაძარში. 
 
