--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -60,7 +60,7 @@
 
 ===წევრობა===
 
-როგორც ზემოთ ავღნიშნეთ, თქმულების თანახმად, რომის დაარსების შემდეგ რომულუსმა 100 კაციანი სენატი შექმნა. საბინელთა შემოერთების შემდეგ სენატორთა რაოდენობა 200 გახდა, ხოლო რესპუბლიკის დროს ტრადიციულად 300 კაციანი სენატი არსებობდა. სენატში მიღებას ცენზორები აწარმოებდნენ. ყოფილ მაგისტრატებსაც შეეძლოთ სენატში მოხვედრა.
+როგორც ზემოთ ავღნიშნეთ, თქმულების თანახმად, რომის დაარსების შემდეგ რომულუსმა 100 კაციანი სენატი შექმნა. საბინელთა შემოერთების შემდეგ სენატორთა რაოდენობა 200 გახდა, ხოლო რესპუბლიკის დროს ტრადიციულად 300 კაციანი სენატი არსებობდა. სენატში მიღებას ცენზორები აწარმოებდნენ. ყოფილ მაგისტრატებსაც შეეძლოთ სენატში მოხვედრა. სენატორს უნდა ჰქონოდა განსაზღვრული ქონებრივი ცენზი და ყოფილიყო უფროსი ასაკის (46 წელზე უფროსი). სულამ ასაკობრივი ცენზი 30 წელზე ჩამოიყვანა.
 
 ===იერარქია===
 
