--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -64,6 +64,8 @@
 
 ===იერარქია===
 
+სენატორები იყოფოდნენ 10 კაციან დაჯგუფებებად, ამ დაჯგუფების მეთაური იყო [[პირველი სენატორი]] - princeps senatus. თუ არსერთი [[კონსული]] არ იყო რომში, მაშინ უზენაესი მაგისტრატი ასრულებდა მათ ფუნქციებს. მხოლოდ პირველ სენატორებს ჰქონდათ სენატში სიტყვის წარმოთქმის უფლება. ამასთან მკაცრად იყო განსაზღვრული თუ ვის და როდის უნდა ესაუბრა. პატრიციუსი სენატორები ყოველთვის უფრო ადრე საუბრობდნენ ვიდრე პლებეები და თან მათი ხმაც უფრო მნიშვნელოვანი იყო კენჭისყრისას.
+
 ===ჩაცმულობა===
 
 ==ლიტერატურა და რესურსები ინტერნეტში==
