--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -70,7 +70,12 @@
 
 ყველა სენატორს უნდ ეტარებინა წოდების დამადასტურებლად ბეჭედი, თავდაოპირველად ეს ბეჭედი რკინის იყო, ხოლო გვიანდელი რესპუბლიკის დროს ოქროსი. მათ ტანსაცმელს tunica clava ერქვა, ეს იყო თეთრი [[ტუნიკა]] მარჯვენა მხარზე განიერი (13სმ) მეწამული ფერის ზოლით. senator pedarius ატარებდა თეთრ ტოგას (virilis). სენატორები, ვინც ამავდროულად მაგისტრატები იყვნენ, ატარებდნენ toga praetexta-ს თეთრ ტოგას ფართო მეწამული კანტით. ყველა სენატორს ეცვა ყავისფერი ტყავის ფეხსაცმელი.
 
-
+<gallery>
+ სურათი:ბერიკაობა.jpg|''[[ბერიკაობა]], [[დოლიძე, გურამ|გურამ დოლიძის]] ნამუშევარი'' ([[1988]])
+ სურათი:Gagra.jpg|''[[გაგრა]]''
+ სურათი:REPIN portret REPIN.jpg|''[[ავტოპორტრეტი]]''
+ სურათი:Staunton chess set.jpg|''[[ჭადრაკი]]''
+ </gallery>
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
