--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -72,8 +72,8 @@
 
 <gallery>
  სურათი:Togapura.jpg|''[[toga virilis]]''
- სურათი:სურათი:Togapraetexta.jpg|''[[toga praetexta]]''
- სურათი:სურათი:Tunic senator.gif|''[[tunica clava]]''
+ სურათი:Togapraetexta.jpg|''[[toga praetexta]]''
+ სურათი:Tunic senator.gif|''[[tunica clava]]''
  </gallery>
 
 [[კატეგორია:ძველი რომი]]
