--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -10,7 +10,7 @@
 
 რომში კი მეფე იწვევდა სენატს და ეკითხებოდა სენატორებს თუ რითი უნდა ეპასუხებინათ რომის პრეტენზიების დაუკმაყოფილებლობაზე და პასუხი იყო რომ ომი უნდა დაწყებულიყო, ამგვარად სენატი ადასტურებდა ომის გამოცხადებას. ბოლოს კი ადამიანი მიდიოდა მტრის საზღვრებთან და ომის გამოცხადების სიტყვებით ოთხი მოწმის თანხლებით სტყორცნიდა შუბს მტრული სახელმწიფოს საზღვრებში.
 
-ანკუსმა აიღო ლათინთა ქალაქი [[პოლიტორიუმი]] და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს [[ტელენი]] და [[ფიკანუსი]]. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - [[მედულიუსი]]. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოიგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი [[ტიბრი|ტიბრის]] მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
+ანკუსმა აიღო ლათინთა ქალაქი [[პოლიტორიუმი]] და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს [[ტელენი]] და [[ფიკანუსი]]. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - [[მედულიუსი]]. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოიგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი [[ტიბროსი|ტიბროსის]] მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
 
 მოსახლეობის ზრდასთან ერთად გაუარესდა კრიმინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ტიბრის შესართავთან ქ. [[ოსცია]] - რომის ნავსადგური ააშენა.
 
