--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -4,6 +4,7 @@
 
 ==რესპუბლიკის სახელმწიფო წყობა==
 <small>''იხ:'' [[რომაელ კონსულთა სია]]</small>
+<small>''იხ:'' [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]</small>
 
 [[სურათი:Toga.png|thumb|200px|რომაელი მოქალაქის ტანსაცმელი - ტოგა. არამოქალაქეს ტოგის ტარების უფლება არ ჰქონდა]]
 
