/* რესპუბლიკის სახელმწიფო წყობა */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -4,7 +4,8 @@
 
 ==რესპუბლიკის სახელმწიფო წყობა==
 <small>''იხ:'' [[რომაელ კონსულთა სია]]</small>
-<small>''იხ:'' [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]</small>
+
+<small>''იხ:'' [[კატეგორია:რომის სახელმწიფო ინსტიტუტები|რომის სახელმწიფო ინსტიტუტები]]</small>
 
 [[სურათი:Toga.png|thumb|200px|რომაელი მოქალაქის ტანსაცმელი - ტოგა. არამოქალაქეს ტოგის ტარების უფლება არ ჰქონდა]]
 
