*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -264,6 +264,10 @@
 
 რესპუბლიკის ეპოქის მიწურულს მოხდა რომის გალამაზება, ფორუმის მორთვა. ამ დროისთვის რომი უკვე მრავალეროვანი მეგალოპისი გახდა, სადაც სხვადასხვა პროვინციებიდან ჩამოსულები სახლდებოდნენ, მათაც ქალაქს თავისებული იერი შესძინეს.
 
+==ასევე იხილეთ==
+
+* [[რომის სენატი]]
+
 ==ლიტერატურა==
 
 * [[პლუტარქე]]  პარალელური ბიოგრაფიები
