--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -17,7 +17,7 @@
 მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა, იგი ჯერ კიდევ მცირე რომის სახელმწიფოში ასრულებდა საკანონმდებლო ხელისუფლების როლს. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატები|მაგისტრატების]] არჩევა.
 
 [[სურათი:SPQR.jpg|thumb|left|რომის სენატი და ხალხი]]
-საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. ამის გარდა სენატი იღებდა და აუქმებდა კანონებს. ყველა ამ მნიშვნელოვანი ფუნქციის შესრულებამ სენატი სახელმწიფოს გულად აქცია. რიგითი რომაელისთვის სენტის უპატივცემლობა სახელმწიფოს უპატივცემლობას უტოლდებოდა. ეს კარგად აისახა ცნობილ ფორმულაშიც SPQR, senatus populus que romanus (რომის სენატი და ხალხი).
+საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. ამის გარდა სენატი იღებდა და აუქმებდა კანონებს. ყველა ამ მნიშვნელოვანი ფუნქციის შესრულებამ სენატი სახელმწიფოს გულად აქცია. რიგითი რომაელისთვის სენტის უპატივცემლობა სახელმწიფოს უპატივცემლობას უტოლდებოდა. ლათინურად სენატორებს რედისტრირებულ (ჩაწერილ) მამებს უწოდებდნენ (patrum numerum). ეს კარგად აისახა ცნობილ ფორმულაშიც SPQR, senatus populus que romanus (რომის სენატი და ხალხი).
 
 თავდაპირველად სენატორები მხოლოდ პატრიციუსები იყვნენ, ხოლო [[ძვ. წ. IV საუკუნე|ძვ. წ. IV საუკუნიდან]], ხანგძლივი ბრძოლის შემდეგ, სენატში მოხვედრა პლებეებმაც შეძლეს. მიუხედავად ამისა, [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში სენატორების უმეტესობას პატრიციუსები შეადგენდნენ. [[ძვ. წ. 313]] წლამდე სენატში ახალ წევრებს კონსული იღებდა, მოგვიანებით კი ცენზორი. პლებეებს შეეძლოთ სენატში მოხვედრა მხოლოდ იმ შემთხვევაში, თუ მათ კონსულებათ აირჩევდნენ, რადგან ყოფილ კონსულებს ტრადიციის თანახმად სენატორად რიცხავდნენ.
 
