/* ძვ. წ. VI საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -2,9 +2,9 @@
 
 ==ძვ. წ. VI საუკუნე==
 
-* [[ძვ. წ. 509|509]] ('''245''' A.V.C.{{სქოლიო|1|avc}}) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
+* [[ძვ. წ. 509|509]] ('''245''' A.V.C.{{სქოლიო|1|avc}}) - [[ლუციუს იუნიუს ბრუტუსი]], [[ლუციუს ტარკვინიუს კოლატინუსი]]
 
-* [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
+* [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა]], სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
 
 *[[ძვ. წ. 508|508]] ('''246''' A.V.C.) - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა
 
