*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,1 +1,2 @@
+[[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
 '''ლუციუს იუნიუს ბრუტუსი''' (Lucius Junius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძ. წ. 509]])
