*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,2 +1,8 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
-'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Junius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძ. წ. 509]])
+'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Junius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 509]])
+
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის კონსულები]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 509]]
