*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -276,6 +276,7 @@
 * {{სქოლიო2|avc}} - "A.V.C." (= "AB VRBE CONDITA") რომაული წელთაღრიცხვა, ქალაქის დაარსებიდან.
 
 [[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის კონსულები]]
 
 [[cs:Seznam římských konzulů]]
 [[de:Liste der römischen Konsuln]]
