*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -3,6 +3,20 @@
 
 
 
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 509]]
+
+
+[[de:Lucius Iunius Brutus]]
+[[en:Lucius_Junius_Brutus]]
+[[es:Lucio Junio Bruto]]
+[[eu:Junio Bruto]]
+[[it:Lucio Giunio Bruto]]
+[[he:לוקיוס יוניוס ברוטוס]]
+[[la:Lucius Iunius Brutus]]
+[[nl:Lucius Junius Brutus]]
+[[no:Lucius Junius Brutus]]
+[[pl:Lucjusz Juniusz Brutus]]
+[[fi:Lucius Junius Brutus]]
