*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,7 +1,7 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
 '''ლუციუს იუნიუს ბრუტუსი''' (Lucius Junius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 509]])
 
-
+ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი.
 
 
 [[კატეგორია:ძველი რომი]]
