*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,7 +1,9 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
 '''ლუციუს იუნიუს ბრუტუსი''' (Lucius Junius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 509]])
 
-ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი.
+ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი. მეფე ხელისუფლებასი უკანონოდ, სიმამრის ვერაგული მკვლელობით მოვიდა და მას ყოველთვის ეშინოდა რომ პრეცენდენტი შეიძლება განმეორდეს და ამიტომ გაწყვიტა არა მარტო უკმაყოფილო სენატორები, არამედ საკუთარი ნათესავებიც. ლუციუს იუნიუსი გონიერი ახალგაზრდა იყო და ადრევე მიხვდა, რომ თუ მეფე მასში გონიერ და ჭკვიან ადამიანს დაინახავს, მაშინ მის სიცოცხლეს სერიოზული საფრთხე დაემუქრება. ამიტომ იგი მრავალი წლის მანძილზე ყველას თავს უგუნურ ლენჩად აჩვენებდა. სწორედ აქედან წარმოიშვა მისი მეტსახელი ბრუტუსი.
+
+
 
 
 [[კატეგორია:ძველი რომი]]
