--- a/22_მარტი.mw
+++ b/22_მარტი.mw
@@ -3,8 +3,10 @@
 
 ==დღის მოვლენები==
 
-*[[1895]] : ძმებმა ლუმიერებმა მოახდინეს თავისი პირველი ფილმის პრეზენტაცია.
-
+*[[1895]] : ძმებმა ლუმიერებმა მოახდინეს პირველი ფილმის პრეზენტაცია.
+*[[1993]] : კორპორაცია [[ინტელი]] სერიულად უშვებს პირველ [[პენტიუმი (პროცესორი)|პენტიუმის]] ჩიპს (80586), 60 მჰც საათის სიჩქარით, 100+ მიპსით და 64 ბიტიანი მონაცემთა არხით.
+*[[1995]] : კოსმონავტი ვალერი პოლიაკოვი ბრუნდება კოსმოსში რეკორდული 438 დღის ყოფნის შემდეგ.
+*[[1997]] : კომეტამ [[ჰალ-ბოპი]] დედამიწას ყველაზე ახლოს ჩაუქროლა.
 
 ==ამ დღეს დაბადებულნი==
 
