*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -3,6 +3,13 @@
 
 ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი. მეფე ხელისუფლებასი უკანონოდ, სიმამრის ვერაგული მკვლელობით მოვიდა და მას ყოველთვის ეშინოდა რომ პრეცენდენტი შეიძლება განმეორდეს და ამიტომ გაწყვიტა არა მარტო უკმაყოფილო სენატორები, არამედ საკუთარი ნათესავებიც. ლუციუს იუნიუსი გონიერი ახალგაზრდა იყო და ადრევე მიხვდა, რომ თუ მეფე მასში გონიერ და ჭკვიან ადამიანს დაინახავს, მაშინ მის სიცოცხლეს სერიოზული საფრთხე დაემუქრება. ამიტომ იგი მრავალი წლის მანძილზე ყველას თავს უგუნურ ლენჩად აჩვენებდა. სწორედ აქედან წარმოიშვა მისი მეტსახელი ბრუტუსი.
 
+ერთხელ მეფის სასახლესი უცნაური რამ მოხდა, სასახლის სვეტიდან გამოძვრა გველი. ეს სიკვდილის ამღნიშნავი იყო. ამ ამბის განსამარტად მან [[დელფის ორაკული|დელფის ორაკულთან]] გაგზავნა თავისი ვაჟები ტიტუსი და არუნტუსი და მათთან ერთად ბრუტუსიც. ორაკულმა ჩასულებს ამცნო რომ რომში ძალაუფლება გადაუვა მას, ვინც პირველი აკოცებს დედას. ტარკვინიუსის ვაჟებმა ეს პირდაპირ გაიგეს, ხოლო ბრუტუსი მიხვდა წინასწარმეტყველების ნამდვილ შინაარს და აკოცა მიწას - ყველას საეთო დედას.
+
+რომაელები ამ დროს რუტულების ქალაქ არდეუმთან ომობდენ. ეს იმ დროისთვის ერთერთი უმდიდრესი ქალაქი იყო, ტარკვინიუსის ფინანსური მდგომარეობა კი არასახარბიელო იყო, სწორედ ეს გახდა ომის მიზეზიც. პირველი შეტევა წარუმატებლად დასრულდა და რომაელებმა ქალაქს ალყა შემოარტყეს. ბანაკში სექსტ ტარკვინიუსი არისტოკრატ ახალგაზრდებთან ერთად ქეიფობდა. მათ შორის ტარკვინიუსის ნათესავი ტარკვინიუს კოლატინუსიც იყო. საუბარი შეეხო ცოლებსაც, კოლატინუსი ყველას არწმუნებდა რომ მისი ცოლი ლუკრეცია ყველაზე ღირსეული ქალი იყო. ყველამ ჩათვალა რომ რომში ჩასვლით და იმის ნახვით თუ როგორ შეეგებებოდნენ ცოლები უეცრად დაბრუნებულ ქმრებს, ყველაზე კარგად ასახავდა მათ მორალურ თვისებებს.
+
+რომში გვიან ღამით ჩავიდნენ და კოლატინუსის სახლს მიადგნენ, მეფის რძლებისგან განსხვავებით ლუკრეცია სახლში იყო და შალს რთავდა. ამრიგად ცოლების "შეჯიბრში" ლუკრეციამ გაიმარჯვა. სექსტუს ტარკვინიუსს ნათესავის მეუღლე ძალიან მოეწონა. რამდენიმე დღის მერე სექსტუსი მარტო მივიდა ლუკრეციას სახლში. იქ მას კარგად გაუმასპინძლდნენ და სტუმრების ოთახში შესთავაზეს დაძინება. როდესაც სახლში ყველამ დაიძინა, სექსტუსი ლუკრეციას საძინებელში შეიპარა და დაემუქრა, რომ თუ იგი არ დანებდებოდა, იგი მას მაინც გააუპატიურებდა, მოკლავდა და მკვდარ მონას მიუწვენდა. ამ მუქარამ გაჭრა და ლუკრეცია დანებდა. როდესაც სექსტუსი წავიდა, ლუკრეციამ შიკრიკები გაუგზავნა ქმარს და მამას, ამცნო რომ ცუდი ამბავი მოხდა და რომ იცინი ერთგულ მეგობრებთან ერთად მოსულიყვნენ.
+
+კოლატინუსსთან ერთად ლუციუს ბრუტუსიც ჩამოვიდა. ლუკრეციამ უამბო ქმარს და მამას თუ რაც შეემთხვა, დააფიცა ისინი რომ შურს იძიებდნენ და თავი მოიკლა. ბრუტუსმა მკვრად ლუკრეციასთან დაიფიცა რომ შურს იძიებს არა მარტო სექსტზე არამედ ლუციუსზეც.
 
 
 
