/* დამხობა და რომიდან გაძევება */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -35,7 +35,7 @@
 
 მოსახლეობამ როდესაც შეიტყო ამ ამაზრზენი ამბის შესახებ, აღშფოთდა, ბრუტუსმა კი შეკრებილ ახალგაზრდობას მოუწოდა შეიარაღებისკენ და აჯანყებისკენ. ფორუმზე რომ მივიდნენ ხალხი იქ უკვე შეკრებილი იყო. ბრუტუსმა მიმართა მათ და სექსტუსის უღის საქციელთან ერთად დაგმო ლუციუსის სიამაყე და უსამართლობაც. მან მოუწოდა რომაელ ხალხს დაემხოთ მეფის მმართველობა რომში და სამეფო ოჯახი გაეძევებინათ.
 
-ლუციუს ტარკვინუსმა როდესაც შეიტყო ამის შესახებ დაიძრა თავისი ჯარითურთ რომისკენ, მაგრამ რომაელებმა კარიბჭე არ გაუღეს. ჯარის იმედი მას აღარ ჰქონდა და ამიტომ ოჯახთან ერთად გაიქცა ერუტრიაში. სექსტუ ჩავიდა გაბიუმში, სადაც იგი ძველმა მტრებმა მოკლეს.
+ლუციუს ტარკვინუსმა როდესაც შეიტყო ამის შესახებ დაიძრა თავისი ჯარითურთ რომისკენ, მაგრამ რომაელებმა კარიბჭე არ გაუღეს. ჯარის იმედი მას აღარ ჰქონდა და ამიტომ ოჯახთან ერთად გაიქცა ერუტრიაში. სექსტი ჩავიდა გაბიუმში, სადაც იგი ძველმა მტრებმა მოკლეს.
 
 ლუციუს ტარკვინუს ამაყმა იმება 25 წელი. რომში მეფობა 240 წელი იყო, დაარსებიდან რესპუბლიკის ჩამოყალიბებამდე.
 
