--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -19,6 +19,12 @@
 
 ==კონსულობა==
 
+რომაელთა მეფის ტირანიისგან განთავისუფლების შემდეგ ბრუტუსმაც და სენატმაც ჩათვალეს რომ ერთმმართველობა აღარ უნდა არსებობდეს, ამიტომ დაწესთა თითო წლის ვადით ორი კონსულის არჩევა. პირველ არჩევნებში ბრუტუსმა რა თქმა უნდა გაიმარჯვა, მასთან ერთად კონსული ტარკვინიუს კოლატინუსიც გახდა. მიუხედავათ იმისა რომ კოლატინუსის მეფისადმი სიძულვილი ეჭვს არ უნდა ბადებდეს, ხალხს მაინც ეშინოდა რომ იგი განიძრახავდა ძალაუფლების ხელში ჩაგდებას.
+
+ბრუტუსმა სენატის სხდომაზე მიმართა კოლატინუს და ურჩია რომ უარი ეთქვა კონსულობაზე და დაეტოვებინა რომი, ამ უკანასკნელს ეს არ სურდა, მაგრამ ყველა ახლობელმა დაჟინებით ურჩია წასულიყო და ქონებაც წაეღო და ბოლოს იგი დათანხვდა. მის ნაცვლად კონსულად აირჩიეს [[ვალერიუს პოპლიკოლა]].
+
+ბრუტუსმა სენატს და რომის მოსახლეობას ფიცი დაადებინა, რომ იცისი არასდროს არ დაუშვებდნენ რომში მეფის მმართველობას.
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 509]]
