--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -23,7 +23,9 @@
 
 ბრუტუსმა სენატის სხდომაზე მიმართა კოლატინუს და ურჩია რომ უარი ეთქვა კონსულობაზე და დაეტოვებინა რომი, ამ უკანასკნელს ეს არ სურდა, მაგრამ ყველა ახლობელმა დაჟინებით ურჩია წასულიყო და ქონებაც წაეღო და ბოლოს იგი დათანხვდა. მის ნაცვლად კონსულად აირჩიეს [[ვალერიუს პოპლიკოლა]].
 
-ბრუტუსმა სენატს და რომის მოსახლეობას ფიცი დაადებინა, რომ იცისი არასდროს არ დაუშვებდნენ რომში მეფის მმართველობას.
+ბრუტუსმა სენატს და რომის მოსახლეობას ფიცი დაადებინა, რომ ისინი არასდროს არ დაუშვებდნენ რომში მეფის მმართველობას. მან შეავსო შეთხელებული სენატი და სენატორთა რაოდენობა 300 კაცს გაუტოლდა.
+
+ტარკვინიუსისგან კი ელჩები ჩამოვიდნენ და მოითხოვეს მეფისთვის ქონების დაბრუნება. სენატმა დაიწყო საკითხის განხილვა, დაბრუნების შემთხვევაში საშუალებას მისცემდნენ მეფეს ებძოლა წართმეული ტახტისთვის, მეორე მხრივ უარის თქმა ომს ნიშნავდა. ელჩებს კი 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
