--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -23,9 +23,9 @@
 
 ბრუტუსმა სენატის სხდომაზე მიმართა კოლატინუს და ურჩია რომ უარი ეთქვა კონსულობაზე და დაეტოვებინა რომი, ამ უკანასკნელს ეს არ სურდა, მაგრამ ყველა ახლობელმა დაჟინებით ურჩია წასულიყო და ქონებაც წაეღო და ბოლოს იგი დათანხვდა. მის ნაცვლად კონსულად აირჩიეს [[ვალერიუს პოპლიკოლა]].
 
-ბრუტუსმა სენატს და რომის მოსახლეობას ფიცი დაადებინა, რომ ისინი არასდროს არ დაუშვებდნენ რომში მეფის მმართველობას. მან შეავსო შეთხელებული სენატი და სენატორთა რაოდენობა 300 კაცს გაუტოლდა.
+ბრუტუსმა სენატს და რომის მოსახლეობას ფიცი დაადებინა, რომ ისინი არასდროს არ დაუშვებდნენ რომში მეფის მმართველობას. მან შეავსო შეთხელებული სენატი და სენატორთა რაოდენობა 300 კაცს გაუტოლდა. არსებობდა რელიგიური რიტუალები, რომლის ჩატარების უფლებაც მხოლოდ მეფეს ჰქონდა, ამიტომ ბრუტუსმა შექმნა "მეფე ქურუმის" თანამდებობა, რომელსაც დაევალა ამ რიტუალების და მსხვერპლშეწირვების ჩატარება.
 
-ტარკვინიუსისგან კი ელჩები ჩამოვიდნენ და მოითხოვეს მეფისთვის ქონების დაბრუნება. სენატმა დაიწყო საკითხის განხილვა, დაბრუნების შემთხვევაში საშუალებას მისცემდნენ მეფეს ებძოლა წართმეული ტახტისთვის, მეორე მხრივ უარის თქმა ომს ნიშნავდა. ელჩებს კი 
+ტარკვინიუსისგან კი ელჩები ჩამოვიდნენ და მოითხოვეს მეფისთვის ქონების დაბრუნება. სენატმა დაიწყო საკითხის განხილვა, დაბრუნების შემთხვევაში საშუალებას მისცემდნენ მეფეს ებძოლა წართმეული ტახტისთვის, მეორე მხრივ უარის თქმა ომს ნიშნავდა. ელჩებს კი სხვა, საიდუმლო დავალებაც ჰქონდათ, მათ უნდა დაეზვერათ თუ რა განწყობებია ხალხში და დაკავშირებულიყვნენ ტარკვინიუსების მომხრეებთან. არც ისე ცოტა წარჩინებული ახალგაზრდა, ტარკვინიუსის ვაჟების მეგობრები მართლა ნანობდნენ მეფის გაგდებას და უკმაყოფილონი იყვნენ რესპუბლიკური წყობით, რადგან ადრე მეფის შვილებთან მეგობრობა მათ პრივილეგიას აძლევდა ბევრს რამეში, ახლა კი სხვების თანასწორნი გახდნენ. სწორეთ ასეთ ხალხს დაუკავშირდნენ ელჩები და დაიწყეს შეთქმულების ჩაფიქრება. ანტირესპუბლიკურ შეთქმულებაში ბრუტუსის ცოლის ძმაც და საკუთარი ვაჟებიც აღმოჩნდნენ.
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
