--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -27,7 +27,9 @@
 
 ტარკვინიუსისგან კი ელჩები ჩამოვიდნენ და მოითხოვეს მეფისთვის ქონების დაბრუნება. სენატმა დაიწყო საკითხის განხილვა, დაბრუნების შემთხვევაში საშუალებას მისცემდნენ მეფეს ებძოლა წართმეული ტახტისთვის, მეორე მხრივ უარის თქმა ომს ნიშნავდა. ელჩებს კი სხვა, საიდუმლო დავალებაც ჰქონდათ, მათ უნდა დაეზვერათ თუ რა განწყობებია ხალხში და დაკავშირებულიყვნენ ტარკვინიუსების მომხრეებთან. არც ისე ცოტა წარჩინებული ახალგაზრდა, ტარკვინიუსის ვაჟების მეგობრები მართლა ნანობდნენ მეფის გაგდებას და უკმაყოფილონი იყვნენ რესპუბლიკური წყობით, რადგან ადრე მეფის შვილებთან მეგობრობა მათ პრივილეგიას აძლევდა ბევრს რამეში, ახლა კი სხვების თანასწორნი გახდნენ. სწორეთ ასეთ ხალხს დაუკავშირდნენ ელჩები და დაიწყეს შეთქმულების ჩაფიქრება. ანტირესპუბლიკურ შეთქმულებაში ბრუტუსის ცოლის ძმაც და საკუთარი ვაჟებიც აღმოჩნდნენ.
 
-ერთერთი შეთქმულის სახლში შეიკრიბნენ ყველანი და ელჩებს გადასცეს წერილი ტარკვინიუსისთვის. ეს საუბარი შემთხვევით მოისმინა მონამ და გასცა. ელჩები მაშინვე შეიპყრეს და აღმოაჩინეს მამხილებელი წერილები. ყველა შეთქმული მაშინვე შეიპყრეს, მათ შორის ბრუტუსის ვაჟებიც. სახელმწიფოს წინაშე დანაშაულისთვის ისინი ჯერ გაწკეპლეს შემდეგ თავები მოკვეთეს.
+ერთერთი შეთქმულის სახლში შეიკრიბნენ ყველანი და ელჩებს გადასცეს წერილი ტარკვინიუსისთვის. ეს საუბარი შემთხვევით მოისმინა მონამ და გასცა. ელჩები მაშინვე შეიპყრეს და აღმოაჩინეს მამხილებელი წერილები. ყველა შეთქმული მაშინვე შეიპყრეს, მათ შორის ბრუტუსის ვაჟებიც. სახელმწიფოს წინაშე დანაშაულისთვის ისინი ჯერ გაწკეპლეს შემდეგ თავები მოკვეთეს. მონა კი, რომელმაც შეატყობინა ხელისუფლებას შეთქმულების შესახებ დააჯილდოვეს, დაათავისუფლეს და მოქალაქეობა უბოძეს.
+
+ამის შემდეგ კონსულებმა და სენატმა რომაელებს საშუალება მისცეს მეფის ქონებიდან რაც უნდოდათ წაეღოთ, რათა ტარკვინიუსების ერთგული არავინ არ დარჩენილიყო, ხოლო მეფის კუთვნილი მიწები [[|მარსი (ღმერთი)|მარსს]] უბოძეს და იმ ადგილს [[მარსის ველი]] ეწოდა.
 
 
 
