--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -29,7 +29,7 @@
 
 ერთერთი შეთქმულის სახლში შეიკრიბნენ ყველანი და ელჩებს გადასცეს წერილი ტარკვინიუსისთვის. ეს საუბარი შემთხვევით მოისმინა მონამ და გასცა. ელჩები მაშინვე შეიპყრეს და აღმოაჩინეს მამხილებელი წერილები. ყველა შეთქმული მაშინვე შეიპყრეს, მათ შორის ბრუტუსის ვაჟებიც. სახელმწიფოს წინაშე დანაშაულისთვის ისინი ჯერ გაწკეპლეს შემდეგ თავები მოკვეთეს. მონა კი, რომელმაც შეატყობინა ხელისუფლებას შეთქმულების შესახებ დააჯილდოვეს, დაათავისუფლეს და მოქალაქეობა უბოძეს.
 
-ამის შემდეგ კონსულებმა და სენატმა რომაელებს საშუალება მისცეს მეფის ქონებიდან რაც უნდოდათ წაეღოთ, რათა ტარკვინიუსების ერთგული არავინ არ დარჩენილიყო, ხოლო მეფის კუთვნილი მიწები [[|მარსი (ღმერთი)|მარსს]] უბოძეს და იმ ადგილს [[მარსის ველი]] ეწოდა.
+ამის შემდეგ კონსულებმა და სენატმა რომაელებს საშუალება მისცეს მეფის ქონებიდან რაც უნდოდათ წაეღოთ, რათა ტარკვინიუსების ერთგული არავინ არ დარჩენილიყო, ხოლო მეფის კუთვნილი მიწები [[მარსი (ღმერთი)|მარსს]] უბოძეს და იმ ადგილს [[მარსის ველი]] ეწოდა.
 
 
 
