--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,5 +1,5 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
-'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Junius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 509]])
+'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Iunius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 509]])
 
 ==ბრუტუსი მეფის დამხობამდე==
 
