--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -31,11 +31,13 @@
 
 ამის შემდეგ კონსულებმა და სენატმა რომაელებს საშუალება მისცეს მეფის ქონებიდან რაც უნდოდათ წაეღოთ, რათა ტარკვინიუსების ერთგული არავინ არ დარჩენილიყო, ხოლო მეფის კუთვნილი მიწები [[მარსი (ღმერთი)|მარსს]] უბოძეს და იმ ადგილს [[მარსის ველი]] ეწოდა.
 
+ტარკვინიუსმა კი, რადგან შეთქმულებით ვერაფერს ვერ მიაღწია, დაარწმუნა ეტრუსკები გამოსულიყვნენ რომაელების წინააღმდეგ. ბრძლაში დაიღუპა ბრუტუსიც და ტარკვინიუსის ვაჟი ატუნტუსიც. ისინი ბრძოლის დაწყების თანავე ეძგერნენ ერთმანეთს და შუბებით განგმირეს ერთმანეთი.
 
+ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა მაინც გაიმარჯვეს. ეს მოხდა რომის დაარსებიდან 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
-[[კატეგორია:გარდაცვლილი ძვ. წ. 509]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 508]]
 
 
 [[de:Lucius Iunius Brutus]]
